--- a/style.css
+++ b/style.css
@@ -104,6 +104,12 @@ Bonus Section
 .phot-container {
   margin: 3% 24%;
 }
+.phot-container h2 {
+ display: flex;
+ justify-content: center;
+  font-size: 36px;
+  font-weight: 500;
+}
 .photo-album {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
